--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "@hapi/boom": "^10.0.0",
     "pino": "^8.0.0",
     "qrcode-terminal": "^0.12.0"
-  }
+  },
+  
+  "engines": {
+  "node": "18.x"
+}
+
 }
